--- a/ecosystem.html
+++ b/ecosystem.html
@@ -174,8 +174,8 @@
                         <h1 id="ecosystem"><a class="header" href="#ecosystem">Ecosystem</a></h1>
 <p>One thing that new Rust developers will face sooner rather than later is
 the absence of some common utilities typically found in other languages'
-standard libraries. There are [very good reasons]
-(https://internals.rust-lang.org/t/what-should-go-into-the-standard-library/2158)
+standard libraries. There are <a href="https://internals.rust-lang.org/t/what-should-go-into-the-standard-library/2158">very good
+reasons</a>
 fore Rust to be this way. This &quot;batteries included&quot; approach, although seemingly
 ergonomic at first glance, can have some
 <a href="https://lwn.net/Articles/790677/">downsides</a> in the long run.</p>
