--- a/contribution.html
+++ b/contribution.html
@@ -172,6 +172,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="contribution"><a class="header" href="#contribution">Contribution</a></h1>
+<p><a href="https://cypherpunks.ca/~iang/pubs/gradingcurve-secdev23.pdf">https://cypherpunks.ca/~iang/pubs/gradingcurve-secdev23.pdf</a></p>
 
                     </main>
 
