--- a/ecosystem.html
+++ b/ecosystem.html
@@ -189,8 +189,8 @@ significantly to my learning journey and personal development. I see it as an
 opportunity to discover more about the ecosystem and to delve deeper into the
 tools we use.</p>
 <p>However, the goal here is to make things easier for you. So, I will share two
-unofficial &quot;curators&quot; that have explored the vast sea of &lt;crates.io&gt; and offer
-us some good starting points.</p>
+unofficial &quot;curators&quot; that have explored the vast sea of
+<a href="https://crates.io">crates</a> and offer us some good starting points.</p>
 <p>The first one, and perhaps the more beginner-friendly, is the <a href="https://blessed.rs/crates">Blessed
 guide</a>.</p>
 <p>The second, which lacks the &quot;handmade&quot; aspect but offers far more options and
